--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="work">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam saepe dolorum sequi cumque officia dolore maxime, voluptatibus minima possimus facere nam labore tenetur incidunt velit ipsum eius! Est, eveniet magnam.
+    </div>
 </body>
 </html>
