--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
     <div class="work">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam saepe dolorum sequi cumque officia dolore maxime, voluptatibus minima possimus facere nam labore tenetur incidunt velit ipsum eius! Est, eveniet magnam.
     </div>
+    <div class="main">
+        <button>click me</button>
+    </div>
 </body>
 </html>
