--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     </div>
     <div class="main">
         <button>click me</button>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil velit necessitatibus debitis magni molestias adipisci quae quo voluptatibus sequi tempora? Sint quia consectetur quas commodi est impedit rem porro corrupti!
     </div>
 </body>
 </html>
